# gnuscope

./: .clang-format  makefile
docs/: README  ev2-format.txt  help.txt  keyboard.ps  sample.gscf  samplecmd.txt  sampleconf.txt
docs/gnuscopemanual/: bigfileexample.ps  displaywindow.ps  ededataheader.ps  gnuscope1.ps  gnuscope2.ps  gnuscope3.ps  gnuscope4.ps  gnuscope5.ps  gnuscope6.ps  gnuscope7.ps  gnuscopeinterface.ps  gnuscopemanual.tex  gnuscopemanual1.tex  gnuscopemanualbib.tex  nsmdataheader.ps  nsmfileheader.ps  sfgraphics.ps  spkdataheader.ps  spkfileheader.ps
src/: CMakeLists.txt  analysis.c  commandfile.c  compress2.c  configfile.c  cursors.c  cursors.h  dialogboxes.c  display.c  displaywindow.c  ecallib.c  ecallib.h  filereading.h  filesel.c  gainshift.c  gates.h  getints.c  gnuscopefuncs.h  gnuscopeglobals.h  gs92.c  gtkgraph.c  gtkgraph.h  gtktwodplot.c  gtktwodplot.h  help.h  logo.h  main.c  makefile  makefile.deb8  makefile.sl4  manipulate.c  memmanage.c  menus.h  output.c  peakfit.c  peakfit.h  pgam.c  pgam.h  pgammatrix.c  pgamsort.c  (+7 more)
src/core/: pgammatrix.c  radwarecompat.c  rwfiles.c
